# ind3x-art

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  playwright.native.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/assets/vanilla_lang/: creative_categories.json  en_us.json  ru_ru.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_details.rs  dto.rs  error.rs  lib.rs  logging.rs  main.rs  watcher.rs
src-tauri/src/builtins/: mod.rs
src-tauri/src/catalog/: builder.rs  cache.rs  category.rs  creative_tabs.rs  dedup.rs  icon.rs  icon_cache.rs  lang.rs  mod.rs  patch.rs  pipeline.rs  query.rs  texture_catalog.rs  textures.rs  vanilla_category.rs  vanilla_lang.rs
src-tauri/src/compile/: mod.rs
src-tauri/src/image/: mod.rs  preview.rs  safe_decode.rs
src-tauri/src/index/: bench.rs  classify.rs  indexer.rs  mod.rs  texture_index.rs
src-tauri/src/ipc/: assets.rs  catalog.rs  commands.rs  helpers.rs  logging.rs  mod.rs  project.rs  save.rs
src-tauri/src/model/: mcmeta.rs  mod.rs  multipart.rs  normalize.rs  parse.rs  types.rs
src-tauri/src/resolve/: mod.rs
src-tauri/src/save/: backup.rs  folder.rs  jar.rs  mod.rs  modes.rs
src-tauri/src/search/: golden_tests.rs  mod.rs
src-tauri/src/source/: folder.rs  jar.rs  mod.rs  path_safety.rs
(+474 files in other folders)
