[package]
name = "ind3x-art"
version = "0.3.0"
description = "Premium Minecraft asset editor"
authors = ["inD3X"]
edition = "2021"
default-run = "ind3x-art"

[lib]
name = "ind3x_art_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"

[[bin]]
name = "export_bindings"
path = "src/bin/export_bindings.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
zip = "2"
walkdir = "2"
rayon = "1"
sled = "0.34"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
notify = { version = "6", features = ["macos_fsevent"] }
tauri-plugin-fs = "2"
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
